# mpi-sppy

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .readthedocs.yml  .ruff.toml  CLAUDE.md  COPYRIGHT.md  CVaR_design.md  LICENSE.md  LISCENSE.txt  README.md  README.rst  addheader.yml  agnostic.txt  codecov.yml  coverage_sitecustomize.py  delme.txt  disruptions.txt  dockerfile  file_header.txt  lor_bug_report.py  mpi_one_sided_test.py  pyproject.toml  requirements-doc.txt  requirements.txt  run-mpitests.py  run_coverage.bash  sed_config_helper.bash  setup.py
.github/workflows/: aphperiodic.lmy  aphperiodic.yml  nompi4py.yml  publish-to-test-pypi.yml  pull_push_regression.yml  pyomoreleased.yml  pyotracker.yml  runall.yml  schur_complement.yml  straight.yml  test_pr_and_main.yml  test_uc_weekly.yml  testadmmWrapper.yml  testadmm_ph.yml  testagnostic.yml  testaph.yml  testbunpick.yml  testci.yml  testconfint.yml  testgeneric.yml  testgradient.yml  testheaders.yml  testmmw.yml  testpysp.yml  testusingdocker.yml  testwithcylinders.yml  twiceweekly.yml  weekly.yml
doc/: Makefile  design_doc_update.rst  gradrho_files.xlsx  jensens_bound_design.md  make.bat  pre_pickle_preprocessing_design.md  xhat_feasibility_cuts_design.md
doc/design/: admm_bundling_design.md  admm_generic_cylinders_plan.md  mrp_generic_design.rst  refactor_generic_cylinders_plan.md
doc/designs/: admm_user_api_automation_design.md  async_buffer_sanity_design.md  bootsp_merge_design.md  chance_constraint_design.md  checkpointing_design.md  cvar_design.md  dependency_cleanup_design.md  flexible_rank_assignments.md  iis_on_xhat_infeasible_design.md  maximization_support.md  mps_module_lp_rho_design.md  multistage_feasible_xhat_design.md  multistage_xhat_write_design.md  mutable_scenario_probabilities_design.md  out_of_the_box_design.md  pre_pickle_preprocessing_design.md  pysp_but_not_mpisppy.md  slamming_design.md  solver_options_redesign.md  vss_design.md  w_oscillation_design.md  xhat_feasibility_cuts_design.md  xhat_from_file_design.md
doc/src/: DELETETHISSOMEDAY.rst  Makefile  access_solutions.rst  admmWrapper.rst  admm_ph.rst  agnostic.rst  amalgamator.rst  amalgomator.rst  aph.rst  api.rst  boot_sp.rst  building_overview.rst  chance_constraints.rst  code_coverage.rst  conf.py  confidence_intervals.rst  contributors.rst  debug_utils.rst  draft_generic_admm.rst  drivers.rst  ef.rst  examples.rst  extensions.rst  feasible_xhat.rst  generic_admm.rst  generic_cylinders.rst  grad_rho.rst  helper_functions.rst  hubs.rst  iis.rst  index.rst  install_mpi.rst  internals.rst  jensens.rst  mmw.rst  mutable_probability.rst  nompi4py.rst  out_of_the_box.rst  output_solutions.rst  overview.rst  (+21 more)
docker-actions/: Dockerfile  action.yml
docker-actions/weekly/: Dockerfile
examples/: afew.py  generic_cylinders.bash  generic_tester.py  logToSheet.py  proper_cylinders.bash  run_all.py  run_all.slurm  run_more.py  run_uc.py  run_uc_pr.py  schur_complement.py  tryone.py
examples/EMPRISE/: README.md  demo.bash  emprise_cylinders.py  requirements.txt
examples/acopf3/: ACtree.py  Readme.rst  ccopf2wood.py  ccopf_multistage.py  fourstage.py  rho_setter.py
examples/aircond/: README  aaircond.py  aircond_ama.py  aircond_cylinders.py  aircond_demo.bash  aircond_ef.py  aircond_mmw.bash  aircond_seqsampling.py  aircond_sequential.bash  aircond_sequential.py  aircond_slow.bash  aircond_zhat.bash  aircond_zhatII.bash  allways.bash  aph.slurm  aph_10per.slurm  bundle_pickler.py  demo.bash  demo.slurm  demo_factors.json  demo_slurm.out  fwdemo.bash  lagranger_factors.json  pickler.py  proper_bundle_demo.bash  trace.slurm  try_pickles.bash  withlagranger.bash
examples/aircondMulti/: README
examples/battery/: Readme.md  battery.py  batteryext.py  batterymain.py
examples/chance_constraint/: cc_capacity.py
examples/dcap/: README.md  dcap_demo.bash
examples/distr/: data_params.json  distr.py  distr_admm_cylinders.py  distr_data.py  distr_ef.py  distr_no_dummy.py  distr_scalable.py  globalmodel.py  go.bash  scalable_distr_admm_cylinders.py
examples/farmer/: afarmer.py  ag.bash  ag_ampl.bash  ag_gams.bash  ag_pyomo.bash  agnostic_ampl_cylinders.py  agnostic_cylinders.py  agnostic_gams_cylinders.py  agnostic_gurobipy_cylinders.py  agnostic_pyomo_cylinders.py  agnostic_pyomo_ph.py  ampl_debug.txt  bad_farmer.py  bad_farmer_cylinders.py  cs_farmer.py  diagnose.py  farmer.mod  farmer.py  farmer_GRB.py  farmer_agnostic.py  farmer_ama.py  farmer_ampl_agnostic.py  farmer_ampl_model.py  farmer_auxiliary.py  farmer_cylinders.py  farmer_ef.py  farmer_ef_ext.py  farmer_gams_agnostic.py  farmer_gams_gen_agnostic.py  farmer_gams_gen_agnostic2.py  farmer_generic.bash  farmer_grb_agnostic.py  farmer_gurobipy_agnostic.py  farmer_gurobipy_mod.py  farmer_lagranger.py  farmer_lshapedhub.py  farmer_mmw.bash  farmer_ph.py  farmer_ph_multi.py  farmer_prob_sensitivity.py  (+12 more)
examples/hydro/: cfg.bash  demo.bash  hydro.py  hydro_cylinders.py  hydro_cylinders_config.py  hydro_cylinders_pysp.py  hydro_ef.py
examples/loose_agnostic/: Readme.txt
examples/netdes/: README  badcs.bash  badmpi.bash  drivertest.py  netdes.py  netdes_auxiliary.py  netdes_cylinders.py  netdes_demo.bash  netdes_demo.slurm  netdes_ef.py  netdes_extension.py  netdes_ph.py  netdes_with_class.py  parse.py  run_bash.py
examples/relief/: candidates_data.json  ef_script.sh  fw_ph.sh  lshaped_script.sh  network_data.json  ph_vanilla.sh  pha_relax_script.sh  pha_script.sh  red_cost_ph.sh  relief.py  scen0.json  scen1.json  scen2.json
examples/scmnd/: README  scmnd.py  scmnd_demo.bash  scmnd_ef.py
examples/sizes/: mps_demo.bash  run_bash.py  sizes.py  sizes_config.txt  sizes_cylinders.py  sizes_demo.py  sizes_ef.py  sizes_expression.py  sizes_ph.py  sizes_pysp.py  (+2 more)
foobar/: __init__.py  log.py  phbase.py  scenario_tree.py  spbase.py
mock_mpi4py/: setup.py
mpisppy/: MPI.py  __init__.py  cgbase.py  entry_points.py  generic_cylinders.py  log.py  mmw_ci.py  mmw_conf.py  mrp_generic.py  phbase.py  proper_cylinders.py  scenario_tree.py  spbase.py  spin_the_wheel.py  spopt.py
(+967 files in other folders)
