###############################################################################
# mpi-sppy: MPI-based Stochastic Programming in PYthon
#
# Copyright (c) 2024, Lawrence Livermore National Security, LLC, Alliance for
# Sustainable Energy, LLC, The Regents of the University of California, et al.
# All rights reserved. Please see the files COPYRIGHT.md and LICENSE.md for
# full copyright and license information.
###############################################################################

[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpi-sppy"
version = "0.14.1.dev0"
authors = [
    {name = "David Woodruff", email = "dlwoodruff@ucdavis.edu" },
]
description = "mpi-sppy"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "sortedcollections",
    "pyomo>=6.4",
]

[project.urls]
homepage = "https://github.com/Pyomo/mpi-sppy"
source = "https://github.com/Pyomo/mpi-sppy"
download = "https://github.com/Pyomo/mpi-sppy"
documentation = "https://mpi-sppy.readthedocs.io"
tracker = "https://github.com/Pyomo/mpi-sppy/issues"

# Console entry points: pip creates a launcher on the user's PATH for each,
# so pip-installed users can run these drivers without knowing where the
# files landed in site-packages.  Each target is an importable module:callable.
# The mpisppy.entry_points wrappers replicate the mpi4py runner's
# abort-on-exception behavior, so multi-rank runs of these scripts
# (e.g. mpiexec -np 3 mpi-sppy-generic-cylinders ...) cannot hang on an
# uncaught exception; the python -m mpi4py module form remains equivalent
# for running from a checkout.
[project.scripts]
mpi-sppy-generic-cylinders = "mpisppy.entry_points:generic_cylinders_main"
mpi-sppy-mrp-generic = "mpisppy.entry_points:mrp_generic_main"
mpi-sppy-one-sided-test = "mpisppy.entry_points:one_sided_test_main"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
]
mpi = [
    "mpi4py>=3.0.3"
]
scipy = [
    "scipy",
]
pandas = [
    "pandas",
]
plot = [
    "matplotlib",
]

# Explicit package/module declaration.  Matches the previous find_packages()
# result (only the mpisppy package and its subpackages) and additionally
# installs the top-level mpi_one_sided_test.py so its console script can
# import it.
[tool.setuptools]
py-modules = ["mpi_one_sided_test"]

[tool.setuptools.packages.find]
include = ["mpisppy", "mpisppy.*"]
